# homm5-game-stats

./: pyproject.toml
src/: MainWindow.py  main.py  main_window.py  main_window.ui  ui_main_window.py
src/config/: frfb_config.json  hrta.json
src/core/: game.py  game_data.py  hero.py  mode.py  race.py  user.py
src/ui/: main_window.py  main_window.ui  ui_main_window.py
